# FGLEngine

./: .deepsource.toml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md  env.sh  prebuild.bat  tracy.sh  vk.env
src/: CMakeLists.txt
src/assets/: CMakeLists.txt  Cube.gltf  OctTreeTest.gltf  OctTreeTestSmall.gltf  PBRSphere.gltf  PBRTest.gltf  PhysicsTest1.glb  RotationTest.gltf  TestScene.gltf  texturedcube.gltf
src/assets/Blender 2.91/: Blender 2.gltf
src/assets/Blender 3.2 Test/: Blender 3.gltf
src/assets/BoundingBoxTest/: bbtest.gltf
src/assets/MaterialTest/: TestMultiMateria.gltf
src/assets/OctTreeTest/: untitled.gltf
src/assets/TransferTest/: Orbs.gltf
src/assets/khronos-sponza/: Sponza.gltf
src/core/: CMakeLists.txt  main.cpp
src/editor/: CMakeLists.txt
src/editor/src/: main.cpp
src/engine/: Attachment.hpp  Average.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Device.cpp  Device.hpp  EngineContext.cpp  EngineContext.hpp  FGL_DEFINES.hpp  FrameInfo.cpp  FrameInfo.hpp  GameObject.cpp  GameObject.hpp  KeyboardMovementController.cpp  KeyboardMovementController.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  PushConstant.hpp  RenderPass.cpp  RenderPass.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  Subpass.hpp  SwapChain.cpp  SwapChain.hpp  Window.cpp  Window.hpp  clock.hpp  constants.hpp  createCube.cpp  debug_defines.hpp  flags.cpp  flags.hpp  globals.cpp  globals.hpp  (+4 more)
src/engine/allocators/: globalAllocator.cpp
src/engine/assets/: AssetManager.cpp  AssetManager.hpp  MaterialManager.cpp  MaterialManager.hpp  TransferData.cpp  TransferData.hpp  TransferManager.cpp  TransferManager.hpp  stores.hpp
src/engine/buffers/: Buffer.cpp  Buffer.hpp  BufferSuballocation.cpp  BufferSuballocation.hpp  BufferSuballocationHandle.cpp  BufferSuballocationHandle.hpp  HostSingleT.hpp  SuballocationView.cpp  SuballocationView.hpp  UniqueFrameSuballocation.hpp  align.hpp
src/engine/camera/: Camera.cpp  Camera.hpp  Camera.puml  CameraDescriptor.hpp  CameraInfo.hpp  CameraManager.cpp  CameraManager.hpp  CameraRenderer.cpp  CameraRenderer.hpp  CameraSwapchain.cpp  CameraSwapchain.hpp  CompositeSwapchain.cpp  CompositeSwapchain.hpp  GBufferCompositor.cpp  GBufferCompositor.hpp  GBufferRenderer.cpp  GBufferRenderer.hpp  GBufferSwapchain.cpp  GBufferSwapchain.hpp
src/engine/concepts/: is_attachment.hpp  is_bindable.hpp  is_buffer.hpp  is_constant_range.hpp  is_descriptor.hpp  is_descriptor_set.hpp  is_descriptor_set_collection.hpp  is_empty_descriptor.hpp  is_empty_descriptor_set.hpp  is_image.hpp  is_layout_descriptor.hpp  is_suballocation.hpp  is_valid_pipeline_input.hpp
src/engine/context/: EngineContext.cpp  EngineContext.hpp  Instance.cpp  Instance.hpp  Window.cpp  Window.hpp  WindowSurface.cpp  WindowSurface.hpp
src/engine/coordinates/: WorldCoordinate.cpp  WorldCoordinate.hpp
src/engine/debug/: DEBUG_NAMES.hpp  DrawQueue.cpp  DrawQueue.hpp  FrameTracker.cpp  FrameTracker.hpp  Track.cpp  Track.hpp  drawers.cpp  drawers.hpp  logging.hpp  tracy_colors.hpp
src/engine/debug_gui/: DebugGUI.cpp  DebugGUI.hpp
src/engine/descriptors/: Descriptor.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorRevolver.cpp  DescriptorRevolver.hpp  DescriptorSet.cpp  DescriptorSet.hpp  DescriptorSetCollection.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  concepts.hpp  createDescriptorSets.hpp
src/engine/filesystem/: FileBrowser.cpp  FileBrowser.hpp  types.hpp
src/engine/gameobjects/: GameObject.cpp  GameObject.hpp
src/engine/gui/: camera.cpp  core.cpp  core.hpp  dockspace.hpp  gui_window_names.hpp  helpers.hpp  preview.cpp  preview.hpp  safe_include.hpp
src/engine/image/: Image.cpp  Image.hpp  ImageHandle.cpp  ImageHandle.hpp  ImageView.cpp  ImageView.hpp  Sampler.cpp  Sampler.hpp
src/engine/literals/: size.hpp
src/engine/logging/: logging.hpp
src/engine/math/: Average.hpp  hyperplaneSeperationTheorem.hpp  intersections.hpp  math.hpp  midpoint.cpp  midpoint.hpp  taitBryanMatrix.cpp  taitBryanMatrix.hpp
src/engine/memory/: DefferedCleanup.cpp  DefferedCleanup.hpp
src/engine/model/: BoundingBox.cpp  BoundingBox.hpp  Model.cpp  Model.hpp  ModelVertex.hpp  OrientedBoundingBox.hpp  Primitive.cpp  Primitive.hpp  SimpleVertex.cpp  Vertex.cpp  Vertex.hpp  gltfLoading.cpp  objLoading.cpp
src/engine/pipeline/: Pipeline.cpp  Pipeline.hpp  PipelineConfigInfo.cpp  PipelineConfigInfo.hpp  PipelineT.hpp  Shader.cpp  Shader.hpp
src/engine/primitives/: Coordinate.hpp  CoordinateOperators.hpp  CoordinateSpace.hpp  Frustum.cpp  Frustum.hpp  Line.hpp  LineSegment.hpp  Matrix.hpp  MatrixEvolvedTypes.hpp  OriginDistancePlane.cpp  OriginDistancePlane.hpp  Plane.cpp  Plane.hpp  PointPlane.cpp  PointPlane.hpp  Rotation.cpp  Rotation.hpp  Scale.hpp  Transform.cpp  Transform.hpp  TransformComponent.cpp  TransformComponent.hpp  Vector.cpp  Vector.hpp  glmOperators.hpp
src/engine/rendering/: Attachment.hpp  CameraSwapchain.cpp  CameraSwapchain.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Device.cpp  (+31 more)
src/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
src/objectloaders/: CMakeLists.txt  gltf_impl.cpp  obj_impl.cpp  stb_image.h  stb_image_write.h  tiny_obj_loader.h
src/shaders/: CMakeLists.txt  bvh.slang  camera.slang  composition.frag  composition.slang  culling.slang  gbuffer.slang  gui-compose.frag  gui-compose.slang  line.frag  line.slang  line.vert  material.slang  shadowmap.slang  textured-gbuffer.frag  textured-gbuffer.vert  textured.slang  textureless-gbuffer.frag  textureless-gbuffer.vert  viewinfo
src/tests/: CMakeLists.txt
src/vma/: CMakeLists.txt  vma_impl.cpp  vma_impl.hpp
tests/: CMakeLists.txt
tests/src/: BoundingBoxTest.cpp  CameraTesting.cpp  FrustumTesting.cpp  PlaneTests.cpp  RotationTests.cpp  TransformTests.cpp  VectorTests.cpp  gtest_printers.hpp  taitBryanMatrixTests.cpp
(+347 files in other folders)
